# opentrace

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: README.md
docs/architecture/: README.md
docs/guide/: README.md  bring-your-own-postgres.md  dev-environment.md  pypi-publish.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  traces.css
frontend/components/: breakpoints.tsx  calendar-picker.tsx  data-table.tsx  empty-state.tsx  jump-bar.tsx  markdown-text.tsx  minimap.tsx  parallel-session-view.tsx  rich-content.tsx  rich-message.tsx  session-header-bar.tsx  session-sidebar.tsx  slide-container.tsx  slide-indicator.tsx  source-badge.tsx  tool-fallback.tsx  type-badge.tsx
frontend/context/: traces-context.tsx
frontend/hooks/: use-chunked-messages.ts  use-polling.ts  use-traces-api.ts
frontend/lib/: api.ts  constants.ts  session-utils.ts  types.ts
opentrace/: Dockerfile  __init__.py
opentrace/cli/: __init__.py  init_skills.py  traced.py
opentrace/daemon/: __init__.py  __main__.py  collector.py  config.py  diagnostics.py  main.py  push_status.py  pusher.py  state.py  watcher.py
opentrace/db/: __init__.py  connection.py  migrations.py  reader.py  schema.sql  writer.py
opentrace/schemas/: __init__.py  unified.py
opentrace/server/: __init__.py  __main__.py  app.py  auth.py  batch.py  handlers.py
opentrace/utils/: __init__.py  cursor_parser.py  progress.py  repo_resolver.py  vscdb.py
scripts/: e2e-docker-smoke-test.sh  e2e-pypi-smoke-test.sh
tests/: __init__.py  helpers.py
tests/cli/: test_cli.py  test_init_skills.py
tests/daemon/: test_daemon_collector.py  test_daemon_config.py  test_daemon_main.py  (+5 more)
(+55 files in other folders)
